--- a/projects.html
+++ b/projects.html
@@ -55,8 +55,8 @@
             <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
             <!-- RD Navbar Brand-->
             <div class="rd-navbar-brand"><a class="brand" href="index.html"><img src="images/school-zh.jpg" alt=""
-                  style="width:290px; height:50px; margin-right: 20px;" /><img src="images/igem-team-nav.jpg" alt=""
-                  style="width:110px; height:70px;" />
+                  style="width:290px;  margin-right: 20px;" /><img src="images/igem-team-nav.jpg" alt=""
+                  style="width:90px;" />
               </a></div>
           </div>
           <div class="rd-navbar-main-element">
@@ -90,50 +90,90 @@
         <ul class="isotope-filters-list" id="isotope-3">
           <!-- <li><a class="active" href="#" data-isotope-filter="*" data-isotope-group="gallery">All</a></li> -->
           <li><a class="active project-a" href="#" data-target="igem2021" data-isotope-group="gallery">2021</a></li>
-          <li><a class = "project-a" href="#" data-target="igem2022" data-isotope-group="gallery">2022</a>
+          <li><a class="project-a" href="#" data-target="igem2022" data-isotope-group="gallery">2022</a>
           </li>
         </ul>
       </div>
-        <div id="igem2021" class="project-content para-indent">
-          <h3 class="wow fadeInRight"  data-wow-delay=".0.5s" id='wikihttps2021igemorgteambnuz-china'>Wiki：<a href='https://2021.igem.org/Team:BNUZ-China' target='_blank' class='url'>https://2021.igem.org/Team:BNUZ-China</a></h3>
-          <img class="wow fadeInRight"  data-wow-delay=".0.5s" style="margin: 0 auto;" src="./images/project/21 PROJECT.png" alt="" width="300px">
-          <h3 class="wow fadeInRight"  data-wow-delay=".0.5s" id='project-1'>Project：</h3>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">慢性肾脏病（CKD）是指肾脏结构或功能异常，肾功能在几个月甚至几年内缓慢衰竭的一类肾脏疾病，目前CKD已成为世界范围内的一个严重的公共卫生问题。硫酸吲哚酚 （IS） 是一种典型的肠道菌群-宿主共代谢物，也是加快 CKD 进程的关键尿毒素。</p>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">BNUZ-China团队以大肠杆菌Nissle 1917为底盘生物，开发一种新型肠道定殖工程菌，该菌中敲除原代谢色氨酸产生吲哚的基因TnaA，并过表达葡萄糖脱氢酶增强工程菌竞争力，达到替代肠道内大肠杆菌的目的。同时，团队在工程细菌中表达了催化色氨酸产生吲哚丙酸的基因簇，吲哚丙酸可以增强肠粘膜屏障。此外，CKD 患者常伴随有肠道菌群失调，具体表现为有益菌减少，而致病菌和条件致病菌异常增殖。因此BNUZ-China团队通过使工程细菌异源表达β-半乳糖苷酶来催化乳糖形成低聚半乳糖，促进其他益生菌的生长。通过上述手段，项目可以从源头上消除肠毒素硫酸吲哚酚，同时促进肠道益生菌增殖，修复肠粘膜屏障，最终达到治疗慢性肾脏病的目的。</p>
-          <img class="wow fadeInRight"  data-wow-delay=".0.5s" style="margin: 0 auto;" src="./images/project/21 RESULT.png" alt="" width="300px">
-          <h3 class="wow fadeInRight"  data-wow-delay=".0.5s" id='result-1'>Result：</h3>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">我们成功地构建了代谢色氨酸以产生吲哚丙酸的代谢途径。吲哚丙酸已被证明对修复肠粘膜屏障有很好的作用，并能起到一定的延缓慢性肾脏疾病进展的作用。同时，过表达GDH以增强工程细菌肠道定植能力的功能通过数学建模得到了验证。另外，我们建立了群体感应过程的数学模型，为后续调节工程菌的肠道菌落结构和代谢提供了理论依据。我们还成功构建了终止开关和防逃逸系统，为我们产品的实际应用创造了条件。</p>
-          <img class="wow fadeInRight"  data-wow-delay=".0.5s" style="margin: 0 auto;" src="./images/project/21 HP.png" alt="" width="300px">
-          <h3 class="wow fadeInRight"  data-wow-delay=".0.5s" id='human-practice-1'>Human practice：</h3>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">近年来，慢性肾脏病（CKD）的发病率在全球范围内呈上升趋势。根据世界卫生组织2020年12月9日发布的《全球健康估计报告》，肾脏疾病已上升为世界十大死因之一。在这种危急情况下，我们的团队提出了基于合成生物学的CKD治疗方案并开展了一系列人类实践活动。为了使我们的项目更有针对性和有效性，并更好地在实践中得到利用，我们进行了问卷调查和分析，与来自不同大学的其他团队合作，采访了相关领域的专家，并展开了一系列的科学交流活动。在这个过程中，我们获得了大量的专业意见，不断地改进我们的项目。</p>
-          <img class="wow fadeInRight"  data-wow-delay=".0.5s" style="margin: 0 auto;" src="./images/project/21 MODEL.png" alt="" width="300px">
-          <h3 class="wow fadeInRight"  data-wow-delay=".0.5s" id='model-1'>Model：</h3>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">我们将所有建模工作分为三个部分：共培育模型，群体感知模型和EXTRA Gillespie模型。</p>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">在实验初期，我们模拟了含有常见益生菌、致病菌和大肠原杆菌的肠道环境，并对工程菌在该环境中的价值做出预测，最终得到该虚拟肠道环境中细菌之间的Lotka-Volterra相互作用模型。</p>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">在实验中期，我们对革兰氏阴性菌搭建群体感应模型，通过该模型解释了肠道中致病菌的含量会如何随时间变化，并基于该模型设计了GDH和bga2表达时间的优化模型。</p>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">在实验后期，我们构建了一个新的模型来模拟患者肠道中的益生菌恢复到正常水平、致病菌含量明显下降的新环境。此外，我们还在实验中利用Gillespie算法和Michaelis-Menten方程构建了色氨酸吲哚丙酸的四步催化反应。</p>
-        </div>
-        <div id="igem2022" class="project-content para-indent">
-          <h3 class="wow fadeInRight"  data-wow-delay=".0.5s" id='wikihttps2022igemwikibnuzh-china'>Wiki：<a href='https://2022.igem.wiki/bnuzh-china' target='_blank' class='url'>https://2022.igem.wiki/bnuzh-china</a></h2>
-          <img class="wow fadeInRight"  data-wow-delay=".0.5s" style="margin: 0 auto;" src="./images/project/22 PROJECT.png" alt="" width="300px">
-          <h3 class="wow fadeInRight"  data-wow-delay=".0.5s" id='project-2'>Project：</h3>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">皮肤结构的严重缺损使自体成纤维细胞的生长失去支撑，导致此类伤口难以愈合。针对该问题，BNUZH-China 2022团队致力于开发一种基于细菌纤维素（BC）的体内可降解皮肤再生支架系统（BCAID），促进全层皮肤加速修复。</p>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">我们利用木醋杆菌合成BC膜，作为成纤维细胞攀附生长的良好支架材料。在伤口愈合过程中，我们希望利用重组腺相关病毒（6型，AAV6）侵染伤口创缘细胞，使侵染的细胞表达并分泌表皮生长因子（EGF）、抗菌肽LL-37和碱性成纤维细胞生长因子（bFGF），最终达到促进伤口愈合和抗菌的效果。</p>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">然而，纤维素体内不可降解的特点将会制约BC的应用，我们希望通过合成生物学方法解决这一问题：将工程化的外源成纤维细胞ATCC CRL-2522（BJ）培养在BC膜上共同植入伤口，在伤口愈合后期，通过启动蓝光光控系统，使BJ能够迅速分泌纤维素酶，从而实现BC膜的体内降解；出于生物安全考虑，在BC膜被完全降解后，工程化BJ细胞将在红光光控系统的调控下分泌毒素蛋白MazF使自身凋亡。至此，难愈合伤口完成修复，我们的支架系统也功成身退。</p>
-          <img class="wow fadeInRight"  data-wow-delay=".0.5s" style="margin: 0 auto;" src="./images/project/22 RESULT.png" alt="" width="300px">
-          <h3 class="wow fadeInRight"  data-wow-delay=".0.5s" id='result-2'>Result：</h3>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">实验表明，细菌纤维素（BC）具有良好的生物相容性；感染相应腺相关病毒（6型，AAV6）的细胞可以提高生长因子EGF和抗菌肽LL-37的表达水平，验证了BCAID具有辅助愈合模块的基本功能；蓝光系统可以成功启动纤维素酶表达，实现BC膜的降解；红光系统最终使工程外源细胞的凋亡成为可能。总体而言，我们的结果初步证明我们的产品是安全有效的，可以帮助目标用户从真皮严重损伤中恢复过来。同时我们还成功制造了产品相关硬件，可以与BC支架一起进行辅助治疗。</p>
-          <img class="wow fadeInRight"  data-wow-delay=".0.5s" style="margin: 0 auto;" src="./images/project/22 HP.png" alt="" width="300px">
-          <h3 class="wow fadeInRight"  data-wow-delay=".0.5s" id='human-practice-2'>Human practice：</h3>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">在项目开展的初期，我们接触到了一些严重烧伤的病例，这些难以愈合的伤口对患者和周围人的身心健康都造成了极大的伤害，怀着帮助这些人的愿望，我们决定开发一种低成本的皮肤再生支架系统，使更多患者能够获得经济有效的治疗。在项目推进的整个过程中，我们与很多优秀的iGEM团队进行了深入的交流与合作，如SZPT-China 2022，同时，我们也积极与产品的利益相关者们取得联系，如消防员、相关领域的企业、专家以及生物学教育的从业者等，在他们的帮助下，我们成功完成了目标产品——体内可降解皮肤再生支架系统（BCAID）的迭代工作，并开发了特色教育材料和工具，以介绍合成生物学和烧伤的相关知识。</p>
-          <img class="wow fadeInRight"  data-wow-delay=".0.5s" style="margin: 0 auto;" src="./images/project/22 MODEL.png" alt="" width="300px">
-          <h3 class="wow fadeInRight"  data-wow-delay=".0.5s" id='model-2'>Model：</h3>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">BNUZH-China 2022团队项目的数学模型主要分为三个部分：</p>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">模块1：蓝光光控系统。我们的光照系统使成纤维细胞系在受到蓝光照射时能够表达纤维素酶。在这里，我们使用希尔函数预测了纤维素外切酶、内切酶与纤维二糖酶的表达饱和时间与最终饱和量。</p>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">模块2：纤维素降解模型。皮下纤维素支架在充分发挥作用后需要被降解,而纤维素支架的最终降解产物可能有两种不同的形式，即纤维二糖或葡萄糖。在此模块中，我们使用逻辑斯蒂回归与实验结果相拟合并通过米氏方程进行过程与结果分析，讨论了何种降解方式效率更高。</p>
-          <p class="wow fadeInRight"  data-wow-delay=".0.5s">模块3：伤口愈合。我们量化了AAV6-bFGF对伤口愈合的作用，通过真皮-表皮相互作用的伤口愈合模型对有BC膜与没有BC膜的伤口愈合进行比较。</p>
-        </div>
-          <!-- <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInRight" data-filter="Type 1">
+      <div id="igem2021" class="project-content para-indent">
+        <h3 class="wow fadeInRight" data-wow-delay=".0.5s" id='wikihttps2021igemorgteambnuz-china'>Wiki：<a
+            href='https://2021.igem.org/Team:BNUZ-China' target='_blank'
+            class='url'>https://2021.igem.org/Team:BNUZ-China</a></h3>
+        <img class="wow fadeInRight" data-wow-delay=".0.5s" style="margin: 0 auto;"
+          src="./images/project/21 PROJECT.png" alt="" width="300px">
+        <h3 class="wow fadeInRight" data-wow-delay=".0.5s" id='project-1'>Project：</h3>
+        <p class="wow fadeInRight" data-wow-delay=".0.5s">
+          慢性肾脏病（CKD）是指肾脏结构或功能异常，肾功能在几个月甚至几年内缓慢衰竭的一类肾脏疾病，目前CKD已成为世界范围内的一个严重的公共卫生问题。硫酸吲哚酚 （IS） 是一种典型的肠道菌群-宿主共代谢物，也是加快 CKD
+          进程的关键尿毒素。</p>
+        <p class="wow fadeInRight" data-wow-delay=".0.5s">BNUZ-China团队以大肠杆菌Nissle
+          1917为底盘生物，开发一种新型肠道定殖工程菌，该菌中敲除原代谢色氨酸产生吲哚的基因TnaA，并过表达葡萄糖脱氢酶增强工程菌竞争力，达到替代肠道内大肠杆菌的目的。同时，团队在工程细菌中表达了催化色氨酸产生吲哚丙酸的基因簇，吲哚丙酸可以增强肠粘膜屏障。此外，CKD
+          患者常伴随有肠道菌群失调，具体表现为有益菌减少，而致病菌和条件致病菌异常增殖。因此BNUZ-China团队通过使工程细菌异源表达β-半乳糖苷酶来催化乳糖形成低聚半乳糖，促进其他益生菌的生长。通过上述手段，项目可以从源头上消除肠毒素硫酸吲哚酚，同时促进肠道益生菌增殖，修复肠粘膜屏障，最终达到治疗慢性肾脏病的目的。
+        </p>
+        <img class="wow fadeInRight" data-wow-delay=".0.5s" style="margin: 0 auto;" src="./images/project/21 RESULT.png"
+          alt="" width="300px">
+        <h3 class="wow fadeInRight" data-wow-delay=".0.5s" id='result-1'>Result：</h3>
+        <p class="wow fadeInRight" data-wow-delay=".0.5s">
+          我们成功地构建了代谢色氨酸以产生吲哚丙酸的代谢途径。吲哚丙酸已被证明对修复肠粘膜屏障有很好的作用，并能起到一定的延缓慢性肾脏疾病进展的作用。同时，过表达GDH以增强工程细菌肠道定植能力的功能通过数学建模得到了验证。另外，我们建立了群体感应过程的数学模型，为后续调节工程菌的肠道菌落结构和代谢提供了理论依据。我们还成功构建了终止开关和防逃逸系统，为我们产品的实际应用创造了条件。
+        </p>
+        <img class="wow fadeInRight" data-wow-delay=".0.5s" style="margin: 0 auto;" src="./images/project/21 HP.png"
+          alt="" width="300px">
+        <h3 class="wow fadeInRight" data-wow-delay=".0.5s" id='human-practice-1'>Human practice：</h3>
+        <p class="wow fadeInRight" data-wow-delay=".0.5s">
+          近年来，慢性肾脏病（CKD）的发病率在全球范围内呈上升趋势。根据世界卫生组织2020年12月9日发布的《全球健康估计报告》，肾脏疾病已上升为世界十大死因之一。在这种危急情况下，我们的团队提出了基于合成生物学的CKD治疗方案并开展了一系列人类实践活动。为了使我们的项目更有针对性和有效性，并更好地在实践中得到利用，我们进行了问卷调查和分析，与来自不同大学的其他团队合作，采访了相关领域的专家，并展开了一系列的科学交流活动。在这个过程中，我们获得了大量的专业意见，不断地改进我们的项目。
+        </p>
+        <img class="wow fadeInRight" data-wow-delay=".0.5s" style="margin: 0 auto;" src="./images/project/21 MODEL.png"
+          alt="" width="300px">
+        <h3 class="wow fadeInRight" data-wow-delay=".0.5s" id='model-1'>Model：</h3>
+        <p class="wow fadeInRight" data-wow-delay=".0.5s">我们将所有建模工作分为三个部分：共培育模型，群体感知模型和EXTRA Gillespie模型。</p>
+        <p class="wow fadeInRight" data-wow-delay=".0.5s">
+          在实验初期，我们模拟了含有常见益生菌、致病菌和大肠原杆菌的肠道环境，并对工程菌在该环境中的价值做出预测，最终得到该虚拟肠道环境中细菌之间的Lotka-Volterra相互作用模型。</p>
+        <p class="wow fadeInRight" data-wow-delay=".0.5s">
+          在实验中期，我们对革兰氏阴性菌搭建群体感应模型，通过该模型解释了肠道中致病菌的含量会如何随时间变化，并基于该模型设计了GDH和bga2表达时间的优化模型。</p>
+        <p class="wow fadeInRight" data-wow-delay=".0.5s">
+          在实验后期，我们构建了一个新的模型来模拟患者肠道中的益生菌恢复到正常水平、致病菌含量明显下降的新环境。此外，我们还在实验中利用Gillespie算法和Michaelis-Menten方程构建了色氨酸吲哚丙酸的四步催化反应。
+        </p>
+      </div>
+      <div id="igem2022" class="project-content para-indent">
+        <h3 class="wow fadeInRight" data-wow-delay=".0.5s" id='wikihttps2022igemwikibnuzh-china'>Wiki：<a
+            href='https://2022.igem.wiki/bnuzh-china' target='_blank' class='url'>https://2022.igem.wiki/bnuzh-china</a>
+          </h2>
+          <img class="wow fadeInRight" data-wow-delay=".0.5s" style="margin: 0 auto;"
+            src="./images/project/22 PROJECT.png" alt="" width="300px">
+          <h3 class="wow fadeInRight" data-wow-delay=".0.5s" id='project-2'>Project：</h3>
+          <p class="wow fadeInRight" data-wow-delay=".0.5s">皮肤结构的严重缺损使自体成纤维细胞的生长失去支撑，导致此类伤口难以愈合。针对该问题，BNUZH-China
+            2022团队致力于开发一种基于细菌纤维素（BC）的体内可降解皮肤再生支架系统（BCAID），促进全层皮肤加速修复。</p>
+          <p class="wow fadeInRight" data-wow-delay=".0.5s">
+            我们利用木醋杆菌合成BC膜，作为成纤维细胞攀附生长的良好支架材料。在伤口愈合过程中，我们希望利用重组腺相关病毒（6型，AAV6）侵染伤口创缘细胞，使侵染的细胞表达并分泌表皮生长因子（EGF）、抗菌肽LL-37和碱性成纤维细胞生长因子（bFGF），最终达到促进伤口愈合和抗菌的效果。
+          </p>
+          <p class="wow fadeInRight" data-wow-delay=".0.5s">
+            然而，纤维素体内不可降解的特点将会制约BC的应用，我们希望通过合成生物学方法解决这一问题：将工程化的外源成纤维细胞ATCC
+            CRL-2522（BJ）培养在BC膜上共同植入伤口，在伤口愈合后期，通过启动蓝光光控系统，使BJ能够迅速分泌纤维素酶，从而实现BC膜的体内降解；出于生物安全考虑，在BC膜被完全降解后，工程化BJ细胞将在红光光控系统的调控下分泌毒素蛋白MazF使自身凋亡。至此，难愈合伤口完成修复，我们的支架系统也功成身退。
+          </p>
+          <img class="wow fadeInRight" data-wow-delay=".0.5s" style="margin: 0 auto;"
+            src="./images/project/22 RESULT.png" alt="" width="300px">
+          <h3 class="wow fadeInRight" data-wow-delay=".0.5s" id='result-2'>Result：</h3>
+          <p class="wow fadeInRight" data-wow-delay=".0.5s">
+            实验表明，细菌纤维素（BC）具有良好的生物相容性；感染相应腺相关病毒（6型，AAV6）的细胞可以提高生长因子EGF和抗菌肽LL-37的表达水平，验证了BCAID具有辅助愈合模块的基本功能；蓝光系统可以成功启动纤维素酶表达，实现BC膜的降解；红光系统最终使工程外源细胞的凋亡成为可能。总体而言，我们的结果初步证明我们的产品是安全有效的，可以帮助目标用户从真皮严重损伤中恢复过来。同时我们还成功制造了产品相关硬件，可以与BC支架一起进行辅助治疗。
+          </p>
+          <img class="wow fadeInRight" data-wow-delay=".0.5s" style="margin: 0 auto;" src="./images/project/22 HP.png"
+            alt="" width="300px">
+          <h3 class="wow fadeInRight" data-wow-delay=".0.5s" id='human-practice-2'>Human practice：</h3>
+          <p class="wow fadeInRight" data-wow-delay=".0.5s">
+            在项目开展的初期，我们接触到了一些严重烧伤的病例，这些难以愈合的伤口对患者和周围人的身心健康都造成了极大的伤害，怀着帮助这些人的愿望，我们决定开发一种低成本的皮肤再生支架系统，使更多患者能够获得经济有效的治疗。在项目推进的整个过程中，我们与很多优秀的iGEM团队进行了深入的交流与合作，如SZPT-China
+            2022，同时，我们也积极与产品的利益相关者们取得联系，如消防员、相关领域的企业、专家以及生物学教育的从业者等，在他们的帮助下，我们成功完成了目标产品——体内可降解皮肤再生支架系统（BCAID）的迭代工作，并开发了特色教育材料和工具，以介绍合成生物学和烧伤的相关知识。
+          </p>
+          <img class="wow fadeInRight" data-wow-delay=".0.5s" style="margin: 0 auto;"
+            src="./images/project/22 MODEL.png" alt="" width="300px">
+          <h3 class="wow fadeInRight" data-wow-delay=".0.5s" id='model-2'>Model：</h3>
+          <p class="wow fadeInRight" data-wow-delay=".0.5s">BNUZH-China 2022团队项目的数学模型主要分为三个部分：</p>
+          <p class="wow fadeInRight" data-wow-delay=".0.5s">
+            模块1：蓝光光控系统。我们的光照系统使成纤维细胞系在受到蓝光照射时能够表达纤维素酶。在这里，我们使用希尔函数预测了纤维素外切酶、内切酶与纤维二糖酶的表达饱和时间与最终饱和量。</p>
+          <p class="wow fadeInRight" data-wow-delay=".0.5s">
+            模块2：纤维素降解模型。皮下纤维素支架在充分发挥作用后需要被降解,而纤维素支架的最终降解产物可能有两种不同的形式，即纤维二糖或葡萄糖。在此模块中，我们使用逻辑斯蒂回归与实验结果相拟合并通过米氏方程进行过程与结果分析，讨论了何种降解方式效率更高。
+          </p>
+          <p class="wow fadeInRight" data-wow-delay=".0.5s">
+            模块3：伤口愈合。我们量化了AAV6-bFGF对伤口愈合的作用，通过真皮-表皮相互作用的伤口愈合模型对有BC膜与没有BC膜的伤口愈合进行比较。</p>
+      </div>
+      <!-- <div class="col-sm-6 col-lg-4 col-xxl-3 isotope-item wow fadeInRight" data-filter="Type 1">
           <article class="thumbnail thumbnail-classic thumbnail-md">
             <div class="thumbnail-classic-figure"><img src="images/project/21 PROJECT.png" alt="" width="420"
                 height="350" />
