--- a/team.html
+++ b/team.html
@@ -55,8 +55,8 @@
             <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
             <!-- RD Navbar Brand-->
             <div class="rd-navbar-brand"><a class="brand" href="index.html"><img src="images/school-zh.jpg" alt=""
-                  style="width:290px; height:50px; margin-right: 20px;" /><img src="images/igem-team-nav.jpg" alt=""
-                  style="width:110px; height:70px;" />
+                  style="width:290px;  margin-right: 20px;" /><img src="images/igem-team-nav.jpg" alt=""
+                  style="width:90px;" />
               </a></div>
           </div>
           <div class="rd-navbar-main-element">
