--- a/news.html
+++ b/news.html
@@ -56,8 +56,8 @@
             <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
             <!-- RD Navbar Brand-->
             <div class="rd-navbar-brand"><a class="brand" href="index.html"><img src="images/school-zh.jpg" alt=""
-                  style="width:290px; height:50px; margin-right: 20px;" /><img src="images/igem-team-nav.jpg" alt=""
-                  style="width:110px; height:70px;" />
+                  style="width:290px;  margin-right: 20px;" /><img src="images/igem-team-nav.jpg" alt=""
+                  style="width:90px;" />
               </a></div>
           </div>
           <div class="rd-navbar-main-element">
@@ -141,55 +141,53 @@
       </div>
     </div>
   </section>
-    <div id="footer">
-      <div id="footer-content">
-        <div class="animate-fade-box">
-          <div id="team-logo" class="footer-img">
-            <a href="https://2022.igem.wiki/bnuzh-china/">
-              <img src="https://static.igem.wiki/teams/4211/wiki/footer/team-logo.png" style="width:auto;height:16vw;">
-              <!-- </a> -->
-          </div>
-          <div id="huitong-logo" class="footer-img">
-            <a href="https://ht.bnuzh.edu.cn/">
-              <img src="https://static.igem.wiki/teams/4211/wiki/footer/huitong-logo.png"
-                style="width:auto;height:3vw;">
-              <!-- </a> -->
-          </div>
-          <div id="leyu-logo" class="footer-img">
-            <a href="https://leyu.bnuzh.edu.cn/">
-              <img src="https://static.igem.wiki/teams/4211/wiki/footer/leyu-logo.png" style="width:auto;height:3vw;">
-              <!-- </a> -->
-          </div>
-          <div id="bnu-logo" class="footer-img">
-            <a href="https://www.bnu.edu.cn/">
-              <img src="https://static.igem.wiki/teams/4211/wiki/footer/bnu-logo.png" style="width:auto;height:12vw;">
-              <!-- </a> -->
-          </div>
-          <div id="wl-logo" class="footer-img">
-            <a href=" https://cef.bnu.edu.cn/">
-              <img src="https://static.igem.wiki/teams/4211/wiki/footer/wl-logo.png" style="width:auto;height:4vw;">
-          </div>
-          <div id="logo-bili" class="footer-img">
-            <img src="https://static.igem.wiki/teams/4211/wiki/footer/logo-bili.jpg" style="width:auto;height:10vw;">
-          </div>
-          <div id="logo-wechat" class="footer-img">
-            <img src="https://static.igem.wiki/teams/4211/wiki/footer/logo-wechat.jpg" style="width:auto;height:10vw;">
-          </div>
-          <div id="footer-contact" class="footer-img ">
-            <img src="https://static.igem.wiki/teams/4211/wiki/footer/footer-contact.png"
-              style="width:auto;height:8vw;">
-          </div>
-        </div>
-        <div class="animate-fade-box">
-          <div id="bgi-logo" class="footer-img">
-            <!-- <a href="https://www.bgi.com/"> -->
-            <img src="https://static.igem.wiki/teams/4211/wiki/footer/bgi-logo.png" style="width:auto;height:10vw;">
+  <div id="footer">
+    <div id="footer-content">
+      <div class="animate-fade-box">
+        <div id="team-logo" class="footer-img">
+          <a href="https://2022.igem.wiki/bnuzh-china/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/team-logo.png" style="width:auto;height:16vw;">
             <!-- </a> -->
-          </div>
         </div>
-        <div class="footer"></div>
+        <div id="huitong-logo" class="footer-img">
+          <a href="https://ht.bnuzh.edu.cn/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/huitong-logo.png" style="width:auto;height:3vw;">
+            <!-- </a> -->
+        </div>
+        <div id="leyu-logo" class="footer-img">
+          <a href="https://leyu.bnuzh.edu.cn/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/leyu-logo.png" style="width:auto;height:3vw;">
+            <!-- </a> -->
+        </div>
+        <div id="bnu-logo" class="footer-img">
+          <a href="https://www.bnu.edu.cn/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/bnu-logo.png" style="width:auto;height:12vw;">
+            <!-- </a> -->
+        </div>
+        <div id="wl-logo" class="footer-img">
+          <a href=" https://cef.bnu.edu.cn/">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/wl-logo.png" style="width:auto;height:4vw;">
+        </div>
+        <div id="logo-bili" class="footer-img">
+          <img src="https://static.igem.wiki/teams/4211/wiki/footer/logo-bili.jpg" style="width:auto;height:10vw;">
+        </div>
+        <div id="logo-wechat" class="footer-img">
+          <img src="https://static.igem.wiki/teams/4211/wiki/footer/logo-wechat.jpg" style="width:auto;height:10vw;">
+        </div>
+        <div id="footer-contact" class="footer-img ">
+          <img src="https://static.igem.wiki/teams/4211/wiki/footer/footer-contact.png" style="width:auto;height:8vw;">
+        </div>
       </div>
+      <div class="animate-fade-box">
+        <div id="bgi-logo" class="footer-img">
+          <!-- <a href="https://www.bgi.com/"> -->
+          <img src="https://static.igem.wiki/teams/4211/wiki/footer/bgi-logo.png" style="width:auto;height:10vw;">
+          <!-- </a> -->
+        </div>
+      </div>
+      <div class="footer"></div>
     </div>
+  </div>
 
   <!-- Global Mailform Output-->
   <div class="snackbars" id="form-output-global"></div>
