修改完善网页细节🥷

--- a/news.html
+++ b/news.html
@@ -55,7 +55,7 @@
             <!-- RD Navbar Toggle-->
             <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
             <!-- RD Navbar Brand-->
-            <div class="rd-navbar-brand"><a class="brand" href="index.html"><img src="images/school-zh.jpg" alt=""
+            <div class="rd-navbar-brand"><a class="brand" href="index.html"><img src="images/school-logo.png" alt=""
                   style="width:290px;  margin-right: 20px;" /><img src="images/igem-team-nav.jpg" alt=""
                   style="width:90px;" />
               </a></div>
@@ -67,7 +67,7 @@
                 <li class="rd-nav-item"><a class="rd-nav-link" href="./projects.html">历史项目</a></li>
                 <li class="rd-nav-item"><a class="rd-nav-link" href="./team.html">团队</a></li>
                 <li class="rd-nav-item active"><a class="rd-nav-link" href="./news.html">新闻</a></li>
-               
+
 
               </ul>
             </div>
@@ -141,32 +141,25 @@
       </div>
     </div>
   </section>
+  <!-- Page Footer-->
   <div id="footer">
     <div id="footer-content">
       <div class="animate-fade-box">
         <div id="team-logo" class="footer-img">
           <a href="https://2022.igem.wiki/bnuzh-china/">
-            <img src="https://static.igem.wiki/teams/4211/wiki/footer/team-logo.png" style="width:auto;height:16vw;">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/team-logo.png" style="width:auto;height:13vw;">
             <!-- </a> -->
         </div>
-        <div id="huitong-logo" class="footer-img">
-          <a href="https://ht.bnuzh.edu.cn/">
-            <img src="https://static.igem.wiki/teams/4211/wiki/footer/huitong-logo.png" style="width:auto;height:3vw;">
-            <!-- </a> -->
-        </div>
-        <div id="leyu-logo" class="footer-img">
-          <a href="https://leyu.bnuzh.edu.cn/">
-            <img src="https://static.igem.wiki/teams/4211/wiki/footer/leyu-logo.png" style="width:auto;height:3vw;">
+
+        <div id="shichuang-logo" class="footer-img">
+          <a href="https://sczx.bnuzh.edu.cn/">
+            <img src="./images/shichuang.jpg" style="width:auto;height:10vw;">
             <!-- </a> -->
         </div>
         <div id="bnu-logo" class="footer-img">
           <a href="https://www.bnu.edu.cn/">
-            <img src="https://static.igem.wiki/teams/4211/wiki/footer/bnu-logo.png" style="width:auto;height:12vw;">
+            <img src="https://static.igem.wiki/teams/4211/wiki/footer/bnu-logo.png" style="width:auto;height:10vw;">
             <!-- </a> -->
-        </div>
-        <div id="wl-logo" class="footer-img">
-          <a href=" https://cef.bnu.edu.cn/">
-            <img src="https://static.igem.wiki/teams/4211/wiki/footer/wl-logo.png" style="width:auto;height:4vw;">
         </div>
         <div id="logo-bili" class="footer-img">
           <img src="https://static.igem.wiki/teams/4211/wiki/footer/logo-bili.jpg" style="width:auto;height:10vw;">
@@ -189,8 +182,6 @@
     </div>
   </div>
 
-  <!-- Global Mailform Output-->
-  <div class="snackbars" id="form-output-global"></div>
   <!-- Javascript-->
   <script src="./js/core.min.js"></script>
   <script src="./js/script.js"></script>
