完成初步手机端适配👻

--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
           <h2 class="timeline-content-title">2022</h2>
           <p class="timeline-content-desc">
             BNUZH-China在比赛中再创佳绩，斩获金牌。
-            这也是BNUZH-China团队建队两年以来第二次获得金牌，实现了北京师范大学珠海校区在国际顶级赛事上获奖的又一突破。
+            这也是BNUZH-China团队建队两年以来第二次获得金牌。
           </p>
         </div>
       </div>
