--- a/news.html
+++ b/news.html
@@ -82,7 +82,7 @@
 <body>
   <!-- Latest blog posts-->
   <section class="section section-sm bg-default" id="news">
-    <div class="container">
+    <div class="container text-center">
       <h2>最新推文</h2>
       <div class="row row-45">
         <div class="col-sm-6 col-lg-4 wow fadeInLeft">
