--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
       <div class="isotope-filters isotope-filters-horizontal">
         <button
           class="isotope-filters-toggle button button-md button-icon button-icon-right button-default-outline button-wapasha"
-          data-custom-toggle="#isotope-3" data-custom-toggle-hide-on-blur="true"
+          data-custom-toggle="#isotope-3" data-custom-toggle-hide-on-blur="true" style="margin: 0 auto; display:block"
           data-custom-toggle-disable-on-blur="true"><span class="icon fa fa-caret-down"></span>Filter</button>
         <ul class="isotope-filters-list" id="isotope-3">
           <!-- <li><a class="active" href="#" data-isotope-filter="*" data-isotope-group="gallery">All</a></li> -->
