进一步适配手机端👻

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
                   style="color:white;">
                   iGEM竞赛是合成生物学领域的国际顶级学术性竞赛，最早由美国麻省理工学院于2003年发起，是一项以合成生物学为核心，综合生命科学、数学、工程学、信息科学、艺术设计等多个学科的国际大赛，受到Nature、Science、Scientific
                   American、Economists 等学术期刊，以及 BBC 等媒体的广泛关注和专题报道。</p><a class="button button-primary button-ujarak"
-                  href="https://igem.org/" data-caption-animate="fadeInUp"
-                  data-caption-delay="200">了解更多</a>
+                  href="https://igem.org/" data-caption-animate="fadeInUp" data-caption-delay="200">了解更多</a>
               </div>
             </div>
           </div>
@@ -102,8 +101,8 @@
                 <h1 data-caption-animate="fadeInLeft" data-caption-delay="0">队伍建设</h1>
                 <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100">
                   北京师范大学珠海校区iGEM团队成立至今已是第三届，我们的团队联系紧密，成员之间和睦相处，一起进步，一起提升。同时，BNUZH-China团队与北京师范大学北京校区代表队BNU-China在实验、数学建模、社会实践等方面进行了深入的合作，取得了许多优异的成果。
-                </p><a class="button button-primary button-ujarak" href="team.html" 
-                  data-caption-animate="fadeInUp" data-caption-delay="200">了解更多</a>
+                </p><a class="button button-primary button-ujarak" href="team.html" data-caption-animate="fadeInUp"
+                  data-caption-delay="200">了解更多</a>
               </div>
             </div>
           </div>
@@ -115,7 +114,7 @@
                   style="color:white">
                   我们的团队成立至今已经获得两次国际金奖啦！BNUZ-China团队2021首次参加比赛就获得金奖，团队由文理学院19级本科生刘路旋担任队长，杜芸希担任副队长，团队由来自生物科学专业、数学与应用数学专业、地理科学专业、化学专业的19位本科生组成。
                 </p><a class="button button-primary button-ujarak" href="https://news.bnu.edu.cn/zx/zhxw/125193.htm"
-                   data-caption-animate="fadeInUp" data-caption-delay="200">了解更多</a>
+                  data-caption-animate="fadeInUp" data-caption-delay="200">了解更多</a>
               </div>
             </div>
           </div>
@@ -180,18 +179,18 @@
     </section> -->
 
     <!-- Cta-->
-    <section class="section section-fluid bg-default">
+    <section class="section section-fluid bg-default" id="joinus">
       <div class="parallax-container" data-parallax-img="images/joinus.png">
         <div class="parallax-content section-xl context-dark bg-overlay-68 bg-mobile-overlay">
           <div class="container">
             <div class="row row-30 justify-content-end text-right">
               <div class="col-sm-7">
-                <h3 class="wow fadeInLeft" style="color: #004da2">加入我们做一些有意思的事情</h3>
-                <p style="color: #004da2">
+                <h3 class="wow fadeInLeft" style="color: #3f75af">加入我们做一些有意思的事情</h3>
+                <p style="color: #3f75af">
                   BNUZH-China团队2021首次参加比赛就获得金牌，团队由来自北京师范大学珠海校区2019级和2020级的19位热爱探索、勤于钻研的同学组成，他们分别来自生物科学、数学、化学和地理专业。
                 </p>
                 <div class="group-sm group-middle group justify-content-end"><a
-                    class="button button-primary button-ujarak" href="contactus.html" data-toggle="modal">了解更多</a><a
+                    class="button button-primary button-ujarak" href="#contactus">联系方式</a><a
                     class="button button-white-outline button-ujarak" href="#">看一看</a></div>
               </div>
             </div>
@@ -921,7 +920,7 @@
               </div>
               <div class="quote-modern-text">
                 <p class="q">
-                  心之所向，素履以往。
+                  Patience is the key in life.
                 </p>
               </div>
             </article>
@@ -1002,7 +1001,7 @@
     </section>-->
 
   <!-- Contact information-->
-  <section class="section section-sm bg-default">
+  <section id="contactus" class="section section-sm bg-default">
     <div class="container">
       <div class="row row-30 justify-content-center">
         <div class="col-sm-8 col-md-6 col-lg-4">
