--- a/projects.html
+++ b/projects.html
@@ -82,10 +82,10 @@
   <section class="section section-sm section-fluid bg-default side-space" id="projects">
     <div class="container-fluid">
       <h2 class="wow fadeInLeft text-center">往年项目介绍</h2>
-      <div class="isotope-filters isotope-filters-horizontal">
+      <div class="isotope-filters isotope-filters-horizontal filter-btn">
         <button
           class="isotope-filters-toggle button button-md button-icon button-icon-right button-default-outline button-wapasha"
-          data-custom-toggle="#isotope-3" data-custom-toggle-hide-on-blur="true" style="margin: 0 auto; display:block"
+          data-custom-toggle="#isotope-3" data-custom-toggle-hide-on-blur="true"
           data-custom-toggle-disable-on-blur="true"><span class="icon fa fa-caret-down"></span>Filter</button>
         <ul class="isotope-filters-list" id="isotope-3">
           <!-- <li><a class="active" href="#" data-isotope-filter="*" data-isotope-group="gallery">All</a></li> -->
