--- a/team.html
+++ b/team.html
@@ -617,7 +617,7 @@
           </div>
           <div class="quote-modern-text">
             <p class="q">
-              心之所向，素履以往。
+              Patience is the key in life.
             </p>
           </div>
         </article>
@@ -1285,11 +1285,6 @@
       <div id="team-logo" class="footer-img">
         <a href="https://2022.igem.wiki/bnuzh-china/">
           <img src="https://static.igem.wiki/teams/4211/wiki/footer/team-logo.png" style="width:auto;height:13vw;">
-          <!-- </a> -->
-      </div>
-      <div id="school-logo" class="footer-img">
-        <a href="https://www.bnuzh.edu.cn/">
-          <img src="./images/school-logo.png" style="width:auto;height:5vw;">
           <!-- </a> -->
       </div>
       <div id="shichuang-logo" class="footer-img">
