fix filter display error🪄

--- a/projects.html
+++ b/projects.html
@@ -66,8 +66,6 @@
                 <li class="rd-nav-item active"><a class="rd-nav-link" href="./projects.html">历史项目</a></li>
                 <li class="rd-nav-item"><a class="rd-nav-link" href="./team.html">团队</a></li>
                 <li class="rd-nav-item"><a class="rd-nav-link" href="./news.html">新闻</a></li>
-
-
               </ul>
             </div>
           </div>
@@ -82,9 +80,9 @@
   <section class="section section-sm section-fluid bg-default side-space" id="projects">
     <div class="container-fluid">
       <h2 class="wow fadeInLeft text-center">往年项目介绍</h2>
-      <div class="isotope-filters isotope-filters-horizontal filter-btn">
+      <div class="isotope-filters isotope-filters-horizontal">
         <button
-          class="isotope-filters-toggle button button-md button-icon button-icon-right button-default-outline button-wapasha"
+          class="isotope-filters-toggle button button-md button-icon button-icon-right button-default-outline button-wapasha filter-btn"
           data-custom-toggle="#isotope-3" data-custom-toggle-hide-on-blur="true"
           data-custom-toggle-disable-on-blur="true"><span class="icon fa fa-caret-down"></span>Filter</button>
         <ul class="isotope-filters-list" id="isotope-3">
