--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               <div class="col-sm-7">
                 <h3 class="wow fadeInLeft" style="color: #3f75af">加入我们做一些有意思的事情</h3>
                 <p style="color: #3f75af">
-                  BNUZH-China团队2021首次参加比赛就获得金牌，团队由来自北京师范大学珠海校区2019级和2020级的19位热爱探索、勤于钻研的同学组成，他们分别来自生物科学、数学、化学和地理专业。
+                  BNUZ-China团队2021首次参加比赛就获得金牌，团队由来自北京师范大学珠海校区2019级和2020级的19位热爱探索、勤于钻研的同学组成，他们分别来自生物科学、数学、化学和地理科学专业。
                 </p>
                 <div class="group-sm group-middle group justify-content-end"><a
                     class="button button-primary button-ujarak" href="#contactus">联系方式</a><a
